# Learn-Language

./: README.md  package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: api.rs  mod.rs
src/components/: AIDialogs.vue  AddLanguage.vue  AiSettings.vue  Breadcrumb.vue  TTSSelect.vue  WordBox.vue  WordMeaningDisplay.vue
src/hooks/: useAiChat.js  useAudioPlayer.js  useClass.js  useTTS.js  useWord.js
src/pages/: Class.vue  Language.vue  LanguageAdd.vue  SetPage.vue
src/pages/Class/: Add.vue  List.vue  Show.vue
src/pages/Word/: Add.vue  Operate.vue
src/router/: index.js
src/store/: class.js  commonWords.js  languages.js  option.js  voices.js  word.js
src/utils/: function.js  sqlite.js
