[package]
name = "learn-language"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "learn_language_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.40"
hex = "0.4.3"
sha2 = "0.10.8"
base64 = "0.22.1"
futures-util = "0.3.31"
tokio-tungstenite = {version = "0.26.2", features = ["native-tls"] }
uuid = {version = "1.16.0", features = ["v4"] }
tauri-plugin-http = {version = "2", features = ["json"] }
tauri-plugin-fs = "2"


[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0"
